# epistemic-memory

./: .gitignore  PLAN.md  README.md  pyproject.toml  trust_policy.yaml
.github/workflows/: ci.yml
docs/: 02_SPEC.md  03_CLAUDE_CODE_PROMPT.md  04_USER_RESEARCH.md  05_ADOPTION_STRATEGY.md  AI Memory System.markdown
epistemic_memory/: assemble.py  audit.py  commitments.py  core.py  demo.py  ingest.py  mcp_server.py  models.py  policy.py  propagate.py  proposals.py  rendering.py  retrieve.py  schema.sql  store.py
examples/: bootstrap_store.py  mcp_config.json  python_quickstart.py  trust_policy.yaml
memgov_bench/: __init__.py  __main__.py  case_loader.py  models.py  reporting.py  runner.py
memgov_bench/adapters/: __init__.py  base.py  controls.py  ours.py
memgov_bench/data/: __init__.py  cases.json  policy.yaml
tests/: conftest.py  test_assemble.py  test_audit.py  test_commitments.py  test_demo.py  test_docs.py  test_ephemeral.py  test_ingest.py  test_mcp_server.py  test_memgov_bench.py  test_policy.py  test_propagation.py  test_proposals.py  test_retrieve.py  test_store.py
tests/golden/: m7_explain_payment_conflict.txt  payment_conflict_context.txt
